--- a/applications/vanilla/design/vanilla.css
+++ b/applications/vanilla/design/vanilla.css
@@ -256,12 +256,26 @@ div.Errors ul li {
 }
 
 .Warning {
-   background: #ffd;
+   background: #ffc;
    border: 1px solid #ff9;
    color: #000;
    padding: 6px 8px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
+}
+.Alert {
+   background: #d00;
+   border: 1px solid #b00;
+   color: #fff;
+   padding: 3px 6px;
+   -moz-border-radius: 3px;
+   -webkit-border-radius: 3px;
+}
+.Alert a {
+   color: #fff;
+}
+.Alert a:hover {
+   text-decoration: underline;
 }
 
 /* Close buttons */
