--- a/applications/garden/design/profile.css
+++ b/applications/garden/design/profile.css
@@ -101,6 +101,78 @@ a:hover {
    text-decoration: none;
    color: #ff0084 /* Body Hover Font Color */;
 }
+form ul li {
+   border-bottom: 1px solid #eee;
+   margin-bottom: 10px;
+   padding: 0px 0px 10px 3px;
+   font-size: 12px;
+   color: #555 /* Body Text Font Color */;
+}
+form ul li label {
+   color: #222 /* Body Text Font Color */;
+   float: left;
+   display: block;
+   width: 150px;
+   font-size: 14px;
+   padding: 6px 6px 0px 4px;
+   }
+body.Messages div.Popup form ul li label {
+   width: 100px;
+}
+form ul li label.RadioLabel {
+   float: none;
+   display: inline;
+   font-weight: normal;
+}
+table.Label tbody th {
+   width: 140px;
+}
+form ul li table label {
+   float: none;
+   display: inline;
+   width: auto;
+}
+body.Messages div.Popup form ul li label.CheckBoxLabel,
+form ul li label.CheckBoxLabel {
+   float: none;
+   width: auto;
+   display: block;
+   font-size: 13px;
+   cursor: pointer;
+   margin: 0px;
+   padding: 0px;
+   line-height: 27px;
+}
+form ul li label.CheckBoxLabel input {
+   margin: 7px 6px 4px 2px;
+   padding: 0px;
+   float: left;
+}
+form ul li label span {
+   font-size: 11px;
+   color: #999;
+   padding-left: 6px;
+   }
+form li.RadioInput label {
+   display: inline;
+   }
+input.SmallButton {
+   cursor: pointer;
+   margin: 0px 0px 0px 0px;
+   font-size: 11px;
+}
+input.SmallInput {
+   width: 80px;
+}
+table th,
+table td {
+   font-size: 13px;
+   padding: 6px;
+   font-weight: bold;
+   color: #000;
+   border-bottom: 1px solid #e2e6ef;
+   line-height: 150%;
+}
 input.DateBox,
 input.InputBox,
 input.SmallInput,
